add users schema
